# materials_management-shared_version-

./: .env.example  .gitignore  AGENTS.md  README.md  dev_token.txt  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  launch-start-app.bat  launch-stop-app.bat  run-e2e.ps1  specification.md  start-app.ps1  stop-app.ps1  test_register.py  test_register_skip.py  test_roots.py
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  test_failures.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_document_url_fields.py  003_order_import_jobs.py  004_generated_artifacts_and_legacy_batch_jobs.py  005_staged_batch_files.py  006_drop_quotation_pdf_link.py  007_remove_legacy_order_batch_support.py  008_add_oidc_user_identity_fields.py  008_import_job_request_metadata.py  010_purchase_orders_header.py  011_purchase_order_line_naming_and_nullable_quotation.py  012_registration_requests.py  013_purchase_order_number_and_lock.py  014_external_sync_foundation.py  015_split_manual_and_mirror_conflicts.py  016_reservation_incoming_allocations.py
backend/app/: api.py  auth.py  config.py  db.py  order_import_paths.py  quotation_paths.py  schemas.py  service.py  storage.py  utils.py
backend/tests/: conftest.py  test_api_integration.py  test_consolidate_items.py  test_db_migration.py  test_document_url_migration.py  test_order_import_paths.py  test_quotation_paths.py  test_runtime_config.py  test_service_transactions.py  test_storage.py
documents/: README.md  change_log.md  operator_guide_ja.md  (+7 more)
(+177 files in other folders)
